# RA

./: .gitignore  CMakeLists.txt  README.md
homework1_test/: package.xml
homework1_test/include/homework1_test/: passthrough_test.h
homework1_test/meshes/: cube.ply  cube_10k.pcd  cube_1face_cut_10k.pcd  cube_2k.pcd  cube_2k_real1.pcd  cube_5k.pcd  cube_all_2k.pcd  cube_cut_100k.pcd  cube_cut_40k.pcd  hexagon_100.pcd  hexagon_cut_20k.pcd  hexagon_cut_40k.pcd  octagon_big.ply  open_pcd_files.txt  triangle_centered_all_2k.pcd  triangle_centered_cut_100k.pcd  triangle_centered_cut_10k.pcd  triangle_centered_cut_5k.pcd  triangle_cut_20k.pcd
homework1_test/src/: node_a (Copia).cpp  node_a.cpp  node_a.h  node_c.cpp  node_hw1_task_2_visual.cpp
homework1_test/test/: APtag_06-12-2019_10-38-14.txt  APtag_12-11-2019_17-19-47.txt  APtag_28-11-2019_15-40-43.txt
homework1_test/test/Test1/: CG_0_triangle_centered_2k.txt  CG_1_triangle_centered_2k.txt  CG_3_triangle_centered_2k.txt  CG_4_cube_2k.txt  CG_4_triangle_centered_2k.txt  CG_5_hexagon_2k.txt  CG_6_triangle_centered_2k.txt  CG_7_hexagon_2k.txt  CG_9_cube_2k.txt
homework1_test/test/Test2/: CG_2_triangle_centered_2k.txt  CG_4_cube_2k.txt  CG_4_triangle_centered_2k.txt  CG_5_cube_2k.txt  CG_5_triangle_centered_2k.txt  CG_7_triangle_centered_2k.txt  CG_8_cube_2k.txt
homework1_test/test/Test3/: CG_3_triangle_centered_2k.txt  CG_4_hexagon_2k.txt  CG_6_triangle_centered_2k.txt  CG_8_hexagon_2k.txt  CG_9_cube_2k.txt  CG_9_triangle_centered_2k.txt
homework1_test/test/Test4/: CG_0_hexagon_2k.txt  CG_2_cube_2k.txt  CG_2_triangle_centered_2k.txt  CG_4_triangle_centered_2k.txt  CG_8_cube_2k.txt  CG_8_triangle_centered_2k.txt
homework1_test/test/Test5-CubHexGood-TrianBad/: CG_0_hexagon_2k.txt  CG_2_triangle_centered_2k.txt  CG_3_cube_2k.txt  CG_4_cube_2k.txt  CG_4_triangle_centered_2k.txt  CG_5_triangle_centered_2k.txt  CG_7_hexagon_2k.txt  CG_8_cube_2k.txt
homework1_test/test/Test6/: CG_2_cube_2k.txt  CG_3_triangle_centered_2k.txt  CG_4_cube_2k.txt  CG_4_triangle_centered_2k.txt  CG_5_triangle_centered_2k.txt  CG_6_triangle_centered_2k.txt  CG_7_cube_2k.txt  CG_8_cube_2k.txt  CG_8_triangle_centered_2k.txt
hw1/: CMakeLists.txt  README_hw1.md  package.xml
hw1/meshes/: cube_cut_10k.pcd
hw1/meshes/Other meshes/: cube_100k.pcd  hexagon_10k.pcd  hexagon_6k.pcd  hexagon_all_2k.pcd  octagon_small.ply  triangle.ply  triangle_100.pcd  triangle_centered.ply  triangle_centered_2k.pcd  triangle_centered_cut_10k (copia).pcd
hw1/src/: node_hw1_task_1.cpp  node_hw1_task_2.cpp  node_hw1_task_2.h  node_hw1_task_2_visual.cpp  node_hw1_task_2_visual.h
hw2/: CMakeLists.txt  README_hw2.md  package.xml
hw2/src/: node_a.cpp  node_b.cpp  node_c.cpp  node_d.cpp  node_d.h  node_hw2_task_1.cpp
hw3/: CMakeLists.txt  package.xml
hw3/laser_scan/: Laser Scan Tab.ods
hw3/src/: follow_wall.cpp  follow_wall.h  laser_read.cpp  node_a.cpp  node_a.h  node_b (copia).cpp  node_b.cpp  node_b.h  node_c.cpp  node_hw3_task_1.h
include/homework1_test/: node_b.h
launch/: hm1.launch
meshes/: hexagon.ply  hexagon_1k.pcd  hexagon_2k.pcd  scene_filtered.pcd  triangle_2k.pcd
msg/: msg_hm1.msg
src/: correspondence_grouping (method).cpp  node_a (copia).cpp  node_a.cpp  node_a_noThread.cpp  node_b.cpp  passthrough_test.cpp
srv/: srv_hm1.srv
test/: APtag_11-11-2019_16-40-44.txt
test/Test1/: CG_2_cube_2k.txt  CG_2_triangle_centered_2k.txt  CG_6_cube_2k.txt  CG_8_cube_2k.txt  CG_8_triangle_centered_2k.txt  CG_9_triangle_centered_2k.txt
test/Test2/: CG_0_hexagon_2k.txt  CG_1_cube_2k.txt  CG_1_triangle_centered_2k.txt  CG_3_cube_2k.txt  CG_3_triangle_centered_2k.txt  CG_6_triangle_centered_2k.txt  CG_8_triangle_centered_2k.txt
test/Test3/: CG_0_cube_2k.txt  CG_0_triangle_centered_2k.txt  CG_1_cube_2k.txt  CG_1_triangle_centered_2k.txt  CG_2_hexagon_2k.txt  CG_5_cube_2k.txt  CG_5_triangle_centered_2k.txt  CG_7_triangle_centered_2k.txt
test/Test4/: CG_1_triangle_centered_2k.txt  CG_3_cube_2k.txt  CG_3_triangle_centered_2k.txt  CG_5_hexagon_2k.txt  CG_6_cube_2k.txt  CG_6_triangle_centered_2k.txt  CG_7_hexagon_2k.txt  CG_9_triangle_centered_2k.txt
test/Test5-CubHexGood-TrianBad/: CG_1_triangle_centered_2k.txt  CG_2_cube_2k.txt  CG_3_triangle_centered_2k.txt  CG_5_cube_2k.txt  CG_6_triangle_centered_2k.txt  CG_8_triangle_centered_2k.txt  CG_9_triangle_centered_2k.txt
test/Test6/: CG_0_hexagon_2k.txt  CG_1_cube_2k.txt  CG_1_hexagon_2k.txt  CG_1_triangle_centered_2k.txt  CG_2_hexagon_2k.txt  CG_2_triangle_centered_2k.txt  CG_3_cube_2k.txt  CG_5_cube_2k.txt  CG_6_cube_2k.txt  CG_7_triangle_centered_2k.txt
